added nodetype target to core-manage to add/remove/check $HOME/.core/nodes.conf (Boeing r1854)

--- a/doc/man/core-manage.1
+++ b/doc/man/core-manage.1
@@ -24,5 +24,7 @@ be verbose when performing action
 core\-manage add service newrouting
 .TP
 core\-manage \fB\-v\fR check model RfPipe
+.TP
+core\-manage \fB\-\-userpath=\fR"$HOME/.core" add nodetype "{ftp ftp.gif ftp.gif {DefaultRoute FTP} netns {FTP server} }"
 .SH "SEE ALSO"
 .BR core-daemon(1)
