fix bug #253 "NetworkManager runs DHCP..." for Ubuntu (but not Fedora/CentOS) use "vethA.B.SS" name for veth devices (A = node number, B = index, SS = short session ID) use "tapA.B.SS" name for tap devices; use "b.A.SS" name for bridge devices added a SESSION_SHORT environment variable to the default CORE environment (Boeing r1867)

--- a/Changelog
+++ b/Changelog
@@ -17,7 +17,8 @@
     - support link delays up to 274 seconds (netem maximum)
     - allow runtime changes of WLAN link effects
   * DAEMON:
-    - set NODE_NAME and NODE_NUMBER in default vnoded environment
+    - set NODE_NAME, NODE_NUMBER, SESSION_SHORT in default vnoded environment
+    - changed host device naming to use veth, tap prefixes; b.n.SS for bridges
     - allow parsing XML files into live running session
     - enable link effects between hub/switch and hub/switch connections
     - update MDR service to use broadcast interfaces for non-WLAN links
