packaging:updates for 4.8rc1

--- a/packaging/deb/changelog
+++ b/packaging/deb/changelog
@@ -1,3 +1,9 @@
+core (4.8rc1-0ubuntu1) precise; urgency=low
+
+  * Support for NRL Network Modeling Framework (NMF) XML representation, bugfixes
+
+ --  CORE Developers <core-dev@pf.itd.nrl.navy.mil>  Thu, 21 May 2015 10:37:10 -0700
+
 core (4.7-0ubuntu1) precise; urgency=low
 
   * EMANE 0.9.1, asymmetric links, bugfixes
