--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,4 @@
-2015-05-21 CORE 4.8rc1
+2015-06-05 CORE 4.8
   * EMANE:
     - support for EMANE 0.9.2
     - run emane in each container when using EMANE 0.9.2
