globally replace mailing list URLs and dev email
update to:
https://publists.nrl.navy.mil/mailman/listinfo/core-users
https://publists.nrl.navy.mil/mailman/listinfo/core-dev

dev email:
core-dev@nrl.navy.mil

--- a/doc/man/core-gui.1
+++ b/doc/man/core-gui.1
@@ -40,5 +40,5 @@ With no parameters, starts the GUI in edit mode with a blank canvas.
 .BR vnoded(1)
 .SH BUGS
 Report bugs to 
-.BI core-dev@pf.itd.nrl.navy.mil.
+.BI core-dev@nrl.navy.mil.
 
