--- a/doc/man/core-xen-cleanup.1
+++ b/doc/man/core-xen-cleanup.1
@@ -23,6 +23,6 @@ also kill the Python daemon
 .SH BUGS
 Warning! This script will remove logical volumes that match the name "/dev/vg*/c*-n*-" on all volume groups. Use with care.
 Report bugs to
-.BI core-dev@pf.itd.nrl.navy.mil.
+.BI core-dev@nrl.navy.mil.
 
 
