--- a/doc/man/vcmd.1
+++ b/doc/man/vcmd.1
@@ -38,5 +38,5 @@ control channel name (e.g. '/tmp/pycore.45647/n3')
 .BR vnoded(1),
 .SH BUGS
 Report bugs to 
-.BI core-dev@pf.itd.nrl.navy.mil.
+.BI core-dev@nrl.navy.mil.
 
