--- a/doc/man/core-daemon.1
+++ b/doc/man/core-daemon.1
@@ -48,5 +48,5 @@ enable debug logging; default = False
 .BR vnoded(1)
 .SH BUGS
 Report bugs to 
-.BI core-dev@pf.itd.nrl.navy.mil.
+.BI core-dev@nrl.navy.mil.
 
