--- a/doc/man/netns.1
+++ b/doc/man/netns.1
@@ -26,5 +26,5 @@ wait for command to complete (useful for interactive commands)
 .BR vnoded(1)
 .SH BUGS
 Report bugs to 
-.BI core-dev@pf.itd.nrl.navy.mil.
+.BI core-dev@nrl.navy.mil.
 
