--- a/doc/man/vnoded.1
+++ b/doc/man/vnoded.1
@@ -40,5 +40,5 @@ establish the specified <control channel> for receiving control commands
 .BR vcmd(1),
 .SH BUGS
 Report bugs to 
-.BI core-dev@pf.itd.nrl.navy.mil.
+.BI core-dev@nrl.navy.mil.
 
