--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,4 @@
-2017-XX-XX CORE 5.0
+2017-09-01 CORE 5.0
   * DEVELOPMENT:
     - support for editorconfig to help standardize development across IDEs, from the defined configuration file
     - support for sonarqube analysis, from the defined configuration file
